--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <groupId>com.chun</groupId>
     <artifactId>springbootstudy</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springbootstudy</name>
-    <description>springbootstudy project for Spring Boot</description>
+    <name>spring-boot-study</name>
+    <description>spring-boot-study project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
     </properties>
