--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ chun.enabled=true
 chun.remote-address=192.168.1.1
 chun.security.name=mike
 chun.security.password=123456
+
+chun.list[0].name=my name
+chun.list[0].description=my description
