--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8001
 
+#spring.profiles.active=production
+
 chun.enabled=true
-#chun.remote-address=192.168.1.1
+chun.remote-address=192.168.1.1
 chun.security.name=mike
 chun.security.password=123456
 
