## 多环境配置 * application.properties配置 spring.profiles.active=dev 时，会自动加载application.properties和application.properties文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8001
 
-#spring.profiles.active=production
+#配置为dev时，就是自动加载application.properties和application.properties文件
+spring.profiles.active=dev 
 
 chun.enabled=true
 chun.remote-address=192.168.1.1
