## 配置文件占位符

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8001
 
-#配置为dev时，就是自动加载application.properties和application.properties文件
+#\uFFFD\uFFFD\uFFFD\uFFFD\u03AAdev\u02B1\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0536\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDapplication.properties\uFFFD\uFFFDapplication.properties\uFFFD\u013C\uFFFD
 spring.profiles.active=dev 
 
 chun.enabled=true
@@ -10,3 +10,9 @@ chun.security.password=123456
 
 chun.list[0].name=my name
 chun.list[0].description=my description
+
+chun.age=12
+chun.name=chun${random.uuid}
+chun.son.name=${chun.name}son
+# \u4F7F\u7528\u9ED8\u8BA4\u503C\uFF0C:\u5C31\u662F\u9ED8\u8BA4\u503C
+chun.son.sex=${chun.sex:man}
