--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8001
 
 #\uFFFD\uFFFD\uFFFD\uFFFD\u03AAdev\u02B1\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0536\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDapplication.properties\uFFFD\uFFFDapplication.properties\uFFFD\u013C\uFFFD
-spring.profiles.active=dev 
+spring.profiles.active=prod 
 
 chun.enabled=true
 chun.remote-address=192.168.1.1
