## 集成ActiveMQ * 点对点消息生产与消费

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8001
 
 #\uFFFD\uFFFD\uFFFD\uFFFD\u03AAdev\u02B1\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0536\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDapplication.properties\uFFFD\uFFFDapplication.properties\uFFFD\u013C\uFFFD
-spring.profiles.active=prod 
+spring.profiles.active=dev 
 
 # redis\u914D\u7F6E
 # REDIS (RedisProperties)
@@ -21,6 +21,12 @@ spring.redis.jedis.pool.max-idle=8
 spring.redis.jedis.pool.min-idle=0
 # \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
 spring.redis.timeout=5000
+
+# activemq\u914D\u7F6E
+spring.activemq.password=admin
+spring.activemq.user=admin
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.pool.enabled=false
 
 chun.enabled=true
 chun.remote-address=192.168.1.1
