--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.activemq.user=admin
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.pool.enabled=false
 # \u5F00\u542Ftopic \uFF08\u53D1\u5E03\u8BA2\u9605\uFF09
-spring.jms.pub-sub-domain=true
+#spring.jms.pub-sub-domain=true
 
 chun.enabled=true
 chun.remote-address=192.168.1.1
