--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,15 @@ spring.activemq.pool.enabled=false
 # \u5F00\u542Ftopic \uFF08\u53D1\u5E03\u8BA2\u9605\uFF09
 #spring.jms.pub-sub-domain=true
 
+#\u6307\u5B9Amybatis \u6620\u5C04\u6587\u4EF6\u8DEF\u5F84
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+#\u914D\u7F6E\u6570\u636E\u5E93\u8FDE\u63A5\u4FE1\u606F
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://192.168.75.128:3306/springboot?autoReconnect=true&useUnicode=true&createDatabaseIfNotExist=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+
 chun.enabled=true
 chun.remote-address=192.168.1.1
 chun.security.name=mike
