--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,11 @@ spring.datasource.url=jdbc:mysql://192.168.75.128:3306/springboot?autoReconnect=
 spring.datasource.username=root
 spring.datasource.password=123456
 
+#\u672C\u5730\u7F13\u5B58 Caffeine
+spring.cache.cache-names=cachename
+spring.cache.caffeine.spec=initialCapacity=50,maximumSize=500,expireAfterWrite=5s
+spring.cache.type=caffeine
+
 chun.enabled=true
 chun.remote-address=192.168.1.1
 chun.security.name=mike
