--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,2 @@
 #\u914D\u7F6E\u65E5\u5FD7\u7CFB\u7EDF\u8DEF\u5F84
-logging.config=classpath:logback-pro.xml
+#logging.config=classpath:logback-pro.xml
