--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,8 @@ spring.activemq.pool.enabled=false
 
 #\u6307\u5B9Amybatis \u6620\u5C04\u6587\u4EF6\u8DEF\u5F84
 mybatis.mapper-locations=classpath:mapper/*.xml
+#\u5F00\u542Fsql\u8BED\u53E5\u65E5\u5FD7\u6253\u5370
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 #\u914D\u7F6E\u6570\u636E\u5E93\u8FDE\u63A5\u4FE1\u606F
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
