## @ConditionalOnProperty的使用 参考文档 https://blog.csdn.net/qq_42145871/article/details/118310230

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,4 +60,4 @@ chun.son.name=${chun.name}son
 # \u4F7F\u7528\u9ED8\u8BA4\u503C\uFF0C:\u5C31\u662F\u9ED8\u8BA4\u503C
 chun.son.sex=${chun.sex:man}
 
-fruit.name=banana
+fruit.name=apple
